# leetcode

./: .eslintrc.json  .gitignore  .golangci.yml  .prettierignore  LICENSE  Makefile  README.md  README2.md  cover.out  eslint.config.js  eslint.config.mjs  go.mod  go.sum  jest.config.js  package-lock.json  package.json  pyproject.toml  qodana.yaml  setup.cfg
.githooks/: pre-commit
adventofcode/: datatypes.py  funcs.py  matrix.py
adventofcode/year/: data2024.py  test2024.py  year2024.py
adventofcode/year2024/: day01.py  day01_test.py  day02.py  day02_test.py  day03.py  day03_test.py  day04.py  day04_test.py  day05.py  day05_test.py  day06.py  day06_test.py  day07.py  day07_test.py  day08.py  day08_test.py  day09.py  day09_test.py  day10.py  day10_test.py  day11.py  day11_test.py  day12.py  day12_test.py  day13.py  day13_test.py  day14.py  day14_test.py  day15.py  day15_test.py  day16.py  day16_test.py  day17.py  day17_test.py  day18.py  day18_test.py  day19.py  day19_test.py  day20.py  day20_test.py  (+10 more)
explore/: arrays-and-strings.md  arrays_and_strings.py
explore/arrays/: tasks.py
explore/hashing/: tasks.py  theory.md
internal/getrow/: getrow.go  getrow_test.go
internal/numways/: numways.go  numways_test.go
internal/solutions/: 1633.sql  175_test.sql  181.sql  182_test.sql  183.sql  193_test.sh  195.sh  196.sql  197_test.sql  adddigits.go  adddigits_test.go  addtwonumbers.go  addtwonumbers_test.go  amountoftime.go  amountoftime_test.go  arraysign.go  arraysign_test.go  arraystringsareequal.go  arraystringsareequal_test.go  assignbikes.go  assignbikes_1.go  assignbikes_1_test.go  assignbikes_2.go  assignbikes_2_test.go  assignbikes_test.go  averageofsubtree.go  averageofsubtree_test.go  backspacecompare.go  backspacecompare_test.go  binarytreepaths.go  binarytreepaths_test.go  buildarray.go  buildarray_test.go  buychoco.go  buychoco_test.go  calculatetime.go  calculatetime_test.go  canattendmeetings.go  canattendmeetings_test.go  (+368 more)
scripts/: code.sh  count.sh  database.sh  db.sh  pre-commit.sh  test.sh
todos/: need-revise.md  need-solve.md  need-to-solve.md
(+1872 files in other folders)
