[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = ""
authors = ["Kirill Kolesnikov <kkxnes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.2.0"
mypy = "^1.8.0"
wemake-python-styleguide = "^0.18.0"
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true

[tool.black]
skip_string_normalization = true
target_version = ["py312"]
